# machine_learning

./: pyproject.toml
datasets/: base.py  breast_cancer.py  iris.py
machine_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models/classification/bayes_classifier/: generative.ipynb
