[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["datasets*", "models*"]
